[package]
name = "uber"
version = "0.1.0"
edition = "2024"
authors = ["wwb"]
publish = false

[dependencies]
frida = { path = "../../../frida" }
reqwest = {version = "0.12.19",default-features = false,features = ["rustls-tls","blocking"]}
serde_json = "1.0.140"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
